# aifocre

./: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  main.go  proc_unix.go  proc_windows.go
.github/workflows/: build.yml  release.yml
solver/: pyproject.toml  requirements.txt
